<resources>
    <string name="app_name">Beba Agua</string>
    <string name="registrar_comsumo">Registrar Comsumo</string>
    <string name="insira_a_meta_em_ml">Insira a meta em ml</string>
    <string name="texto_status">texto Status</string>
    <string name="meta_diaria">Meta Diaria</string>
    <string name="consumo_atual">Consumo Atual</string>
    <string name="bem_vindo_ao_beba_gua">Bem-vindo ao Beba Água!</string>
    <string name="descricao_do_icone_do_aplicativo">ic_app_icon</string>
    <string name="lembrete">lembrete</string>
    <string name="a_cada_2_horas">2 horas</string>
    <string name="_30_minutos">30min.</string>
    <string name="a_cada_1_hora"> 1 hora</string>
    <string name="nenhum_hist_rico_encontrado">Nenhum histórico encontrado.</string>
    <string name="cone_de_status_da_meta">Ícone de status da meta</string>
    <string name="beba_gua">Beba Água </string>
    <string name="Versao">Beta 1.0.1 </string>
    <string name="Desenvolvido">Desenvolvido por dvejra@gmail.com</string>

</resources>